frame/support/test/tests/pallet_ui/step_018.stderr
error: Invalid generics: expect `impl<T: Trait>` or `impl<T: Trait<I>, I: 'static>`
  --> $DIR/step_018.rs:15:2
   |
15 |     impl Foo {}
   |     ^^^^

error: unexpected end of input, expected `T`
 --> $DIR/step_018.rs:1:1
  |
1 | #[frame_support::pallet]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
